# Wayfarer-SD-Runpod

./: .bazelrc  .dockerignore  .env.example  .env.old  .gitignore  Dockerfile-charsheet  Dockerfile-generic  Dockerfile-portrait  README.md  WORKSPACE  app.py  build_esrgan.sh  build_flux_generic.sh  build_schnell_generic.sh  build_sd_charsheet.sh  build_sd_generic.sh  build_sd_portrait.sh  build_sd_upscale.sh  build_sdxl_controlnet.sh  build_sdxl_generic.sh  build_sdxl_upscale.sh  character-sheet.py  charsheet.py  create_test.py  download_controlnet_openpose.py  generic.py  output.json  portrait.py  requirements.txt  sd-test.py  test_input.json
_esrgan/: Dockerfile  upscale.py
_flux_generic/: BUILD.bazel  Dockerfile  download.py  generic.py
_schnell_generic/: Dockerfile  download.py  generic.py
_sd_charsheet/: Dockerfile
_sd_generic/: Dockerfile
_sd_portrait/: Dockerfile
_sd_upscale/: Dockerfile  download.py  upscale.py
_sdxl_controlnet/: Dockerfile  controlnet.py  download.py
_sdxl_generic/: Dockerfile  download.py  generic.py
_sdxl_upscale/: Dockerfile  download.py  test-input.json  upscale.py  upscalenew.py
_upscale/: upscale.py
base/: Dockerfile  download_sd.py
charsheet/: Dockerfile  charsheet.py
generic/: Dockerfile  generic.py
portrait/: Dockerfile  portrait.py
